extract new releases for pre-order too

--- a/frontend-app/TODO
+++ b/frontend-app/TODO
@@ -1,2 +1,3 @@
 - ADD USER INTERFACE TO VIEW FAVOURITE LIST UNDER MY FIGURES
+- Add Search input for Home Screen
 - ENSURE THAT FAVOURITE BUTTON IN HOME IS WORKING AND SHOWS SOLID HEART IF FAVOURITED - DONE
