--- a/frontend-app/TODO
+++ b/frontend-app/TODO
@@ -1,3 +1,4 @@
 - ADD USER INTERFACE TO VIEW FAVOURITE LIST UNDER MY FIGURES
 - Add Search input for Home Screen
 - ENSURE THAT FAVOURITE BUTTON IN HOME IS WORKING AND SHOWS SOLID HEART IF FAVOURITED - DONE
+- Fix Pagination when numbers gets too large
